# notatki_panel

./: Cargo.toml  Makefile.toml  README.MD  README.md  TODO  ____TODO____  client_build.sh  client_build_dev.sh  client_build_release.sh  client_start.sh  package.json  run.sh  run_from_web.sh  run_from_web_local.sh  server_start.sh  start.sh
panel/chrome-extension-inject-iframe/: README.md  manifest.json  parcel wspiera budowanie rozszerzeń
panel/chrome-extension-inject-iframe/src/: background.js  inject.js
panel/chrome-extension-inject-iframe/src/browser_action/: browser_action.html
panel/client/: Cargo.toml
panel/client/src/: content.rs  lib.rs  main.rs  request.rs  state.rs  utils.rs
panel/client/src/app/: app.rs  app_render.rs  app_state.rs  mod.rs  node_state.rs  render.rs  render_footer.rs  render_header.rs  render_list.rs  response.rs  state.rs
panel/client/src/app/__state/: state_view_new_content.rs
panel/client/src/app/app/: app.rs  app_render.rs  app_render_content.rs  app_render_list.rs  app_render_menu.rs  mod.rs
panel/client/src/app/app/alert/: app_index_alert_delete_state.rs  app_index_alert_moveitem_state.rs  app_index_alert_search_state.rs  app_index_alert_state.rs  mod.rs
panel/client/src/app/edit_content/: app_editcontent_render.rs  app_editcontent_state.rs  mod.rs  render.rs  state.rs
panel/client/src/app/fetch/: fetch_root.rs  mod.rs
panel/client/src/app/index/: alert.rs  alert_search.rs  app_index_render.rs  app_index_render_content.rs  app_index_render_header.rs  app_index_render_list.rs  app_index_render_menu.rs  app_index_state.rs  menu.rs  mod.rs  render.rs  render_content.rs  render_header.rs  render_list.rs  render_menu.rs  state.rs  state_alert.rs  state_alert_delete.rs  state_alert_search.rs
panel/client/src/app/index/alert/: app_index_alert_delete_state.rs  app_index_alert_moveitem_state.rs  app_index_alert_search_state.rs  app_index_alert_state.rs  mod.rs
panel/client/src/app/new_content/: mod.rs  new_name.rs  render.rs  state.rs
panel/client/src/app/new_dir/: app_newdir_render.rs  app_newdir_state.rs  mod.rs  new_name.rs  render.rs  state.rs
panel/client/src/app/newcontent/: app_newcontent_render.rs  app_newcontent_state.rs  mod.rs  newcontent_render.rs  newcontent_state.rs
panel/client/src/app/rename_item/: app_renameitem_render.rs  app_renameitem_state.rs  mod.rs  render.rs  state.rs
panel/client/src/app/render/: mod.rs  render.rs  render_content.rs  render_header.rs  render_list.rs  render_menu.rs  vied_edit_content.rs
panel/client/src/app/render/view_index/: mod.rs  render_content.rs  render_header.rs  render_list.rs  render_menu.rs
panel/client/src/app/state/: mod.rs  state.rs  state_node_content.rs  state_node_dir.rs  state_root.rs  state_view_index.rs
panel/client/src/app/state/state_data/: mod.rs
panel/client/src/components/: alert_box.rs  button.rs  error_line.rs  icon.rs  list_item.rs  list_items.rs  message.rs  mod.rs  new_name.rs  path.rs  stick_wrapper.rs
panel/client/src/components/list_items/: mod.rs
panel/client/src/content/: content.rs  mod.rs  words.rs  youtube.rs
panel/client/src/data/: calculate_next_path.rs  mod.rs  open_links.rs  tabs.rs  tabs_hash.rs
panel/client/src/data/git/: mod.rs  models.rs  node_content.rs  node_dir.rs  root.rs  state_node_content.rs  state_root.rs
panel/client/src/state/: mod.rs  state.rs  state_view_edit_content.rs  state_view_index.rs
panel/client/src/state/state_data/: state_root.rs
panel/client/src/state_data/: mod.rs  state_node_content.rs  state_node_dir.rs  state_root.rs
panel/client/src/state_data/git/: state_node_dir.rs
panel/client/src/view/: mod.rs  render.rs  vied_edit_content.rs
panel/client/src/view/components/: mod.rs
panel/client/src/view/view_index/: mod.rs  render_content.rs  render_header.rs  render_list.rs  render_menu.rs
panel/common/: Cargo.toml
panel/common/src/: lib.rs
panel/server/: Cargo.toml
panel/server/src/: api.rs  main.rs  models.rs  static_response.rs  sync.rs  test.http
panel/server/src/git/: command_create_file.rs  command_find_blob.rs  command_find_main_commit.rs  command_rename_item.rs  command_save_change.rs  git.rs  git_session.rs  gitsync.rs  gitsync_session.rs  mod.rs  models.rs  utils.rs
panel/server/src/gitdb/: dir.rs  disk.rs  item.rs  mod.rs
panel/server/src/utils/: error.rs  mod.rs  response.rs  spawn.rs  time.rs
src/: client.tsx  server.tsx
src/client/: App.tsx
src/client/AppState/: AppState.ts  ContentState.ts  CounterState.ts  CurrentPath.ts
src/client/api/: apiGetPath.ts
src/client/utils/: MobxValueConnect.ts  createContext.ts
src/common/: MobxMapAutoNew.ts  buildValidator.ts  fetchRequest.ts  validator.ts
src/server/: SyncState.ts  api.ts  getClientJs.ts
src/server/lib/: getAbsolutePath.ts  getBody.ts  getEnvParams.ts  timeout.ts
ts-version/: build.sh  run.sh  tsconfig.json
ts-version/src/: client.tsx
ts-version/src/client/: App.tsx  Context.ts
ts-version/src/client/AppState/: CurrentPath.ts
ts-version/src/common/: MobxValue.ts
ts-version/src/server/: SyncState.ts  getClientJs.ts  index.html.tsx  readFromPath.ts
ts-version/src/server/lib/: checkCommit.ts  execCommand.ts
