[package]
name = "client"
version = "0.1.0"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4.14"
wasm-bindgen = {version = "0.2.73", features = ["nightly"]}
wasm-bindgen-futures = "0.4.23"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

#vertigo = { git="https://github.com/vertigo-web/vertigo" }
#browserdriver = { git = "https://github.com/vertigo-web/vertigo" }
#vertigo-html = { git = "https://github.com/vertigo-web/vertigo" }

vertigo = { path = "../../../vertigo/crates/vertigo" }
vertigo-browserdriver = { path = "../../../vertigo/crates/vertigo-browserdriver" }
vertigo-html = { path = "../../../vertigo/crates/vertigo-html" }

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

url = "2.2.2"
qstring = "0.7.2"

common={ path="../common" }


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

