[package]
name = "client"
version = "0.1.0"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.14"

vertigo = { git="https://github.com/vertigo-web/vertigo", branch="render_list" }
# vertigo = { path = "../../../vertigo/crates/vertigo" }

# TODO - pozbyć się tej zaleności
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

url = "2.2.2"
qstring = "0.7.2"

common={ path="../common", features=[ "client" ] }


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

