[package]
name = "common"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
# vertigo = { path = "../../../vertigo/crates/vertigo", features = [ "serde_request" ] }
vertigo = { git="https://github.com/vertigo-web/vertigo", features = [ "serde_request" ], branch="ssr_next_part" }
