[package]
name = "common"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = [ "backend", "frontend" ]
api = [ "serde", "serde_json" ]
client = [ "vertigo" ]

[dependencies]
serde = { version = "1.0.125", features = ["derive"], optional = true }
serde_json = { version = "1.0.64", optional = true }
vertigo = { git="https://github.com/vertigo-web/vertigo", branch="other", optional = true }
# vertigo = { path = "../../../vertigo/crates/vertigo", optional = true }
