[package]
name = "server"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.79"
log = "0.4.16"
envy = "0.4.2"
pretty_env_logger = "0.4"
futures = "0.3.21"
git2 = "0.14.2"

tokio = { version = "1.17.0", features = ["full"] }

poem = { version = "1.3.29", features = ["static-files"] }
poem-openapi = { version = "1.3.29", features = ["static-files", "swagger-ui"] }

