[package]
name = "server"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_json = "1.0.85"
log = "0.4.17"
envy = "0.4.2"
pretty_env_logger = "0.4"
futures = "0.3.21"
git2 = "0.15.0"

tokio = { version = "1.21.2", features = ["full"] }

poem = { version = "1.3.36", features = ["static-files"] }
poem-openapi = { version = "2.0.6", features = ["static-files", "swagger-ui"] }

