[package]
name = "server"
version = "0.1.0"
authors = ["Grzegorz Szeliga <grzegorz.szeliga@twoupdigital.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
log = "0.4.17"
envy = "0.4.2"
pretty_env_logger = "0.4"
futures = "0.3.25"
git2 = "0.16.1"

tokio = { version = "1.24.1", features = ["full"] }

poem = { version = "1.3.52" }
poem-openapi = { version = "2.0.23", features = ["static-files", "swagger-ui"] }


